# smai_assignment2

./: a1.py  a2.py  a3.py  a4.py  a5.py  pyproject.toml
models/: gmm.py  kmeans.py  pca.py
